posiGen_FullsendBox/src/objects/SF_ChangeLog_Item__c.object
<CustomObject>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>SF ChangeLog Items</relationshipLabel>
        <relationshipName>SF_ChangeLog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Type_Detail__c</fullName>
        <inlineHelpText>If Change Type edited, what was done.</inlineHelpText>
        <label>Change Type Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_Criteria__c</fullName>
        <label>Formula/Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <label>Type1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SF ChangeLog Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Change_Type_Detail__c</columns>
        <columns>Name__c</columns>
        <columns>Object__c</columns>
        <columns>Change_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL{00000}</displayFormat>
        <label>SFChange Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF ChangeLog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>